rootfs/etc/k8sage/repositories/argo-workflows/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argo-workflows-server
  annotations:
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /argo-workflows/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
